[package]
name = "huly-md"
version = "0.0.1"
description = "Huly MD"
authors = ["andrey@huly.io"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
loro-internal = "0.5"
loro-delta = "0.5"
lazy_static = "1"
generic-btree = { version = "^0.10.5" }
